fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -32,14 +32,16 @@ body {
     background-image: url(./images/green-stuff.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    min-width: 100px; 
 }
 
 img {
     height: 150px;
+
 }
 
 .form-section {
     height: 80vh;
-    width: 60vw;
+    width: 100vw;
     background-color: azure;
 }
